--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ main {
 }
 
 .container-home {
-    margin-top: 150px;
+    padding-top: 150px;
     width: 100%;
     height: auto;
     display: flex;
@@ -229,22 +229,71 @@ main {
 
 /* Seccion About Me */
 .container-about-me {
-    margin-top: 200px;
+    padding-top: 100px;
     width: 100%;
     display: flex;
     justify-content: center;
     height: auto;
-    background-color: rgb(43, 44, 44);
+    background-color: transparent;
     color: var(--tx);
 }
 
 .about-me {
     margin: 0;
-    width: 80%;
-    display: flex;
-   
-    
+    width: 80%;   
 }
+
+.content-about-me {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.title-about-me {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    font-size: 3rem;
+}
+
+.title-about-me span {
+    font-family: 'Righteous';
+    font-weight: 400;
+    display: block;
+    justify-content: center;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 10ch;
+    animation: typing 10s steps(11), blink .5s infinite step-end alternate;
+    overflow: hidden;
+    animation-iteration-count: infinite;
+}
+
+@keyframes typing {
+    from {width: 0}    
+}
+
+@keyframes blink {
+    50% {border-color: transparent}
+}
+
+.container-img {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.container-img img {
+    width: 300px;
+    height: 400px;
+    border-radius: 50%;
+    box-shadow: 16px 14px 20px #0000008c;
+}
+
 
 /* Seccion responsiva a 1030px */
 
