--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,6 +292,26 @@ main {
     height: 400px;
     border-radius: 50%;
     box-shadow: 16px 14px 20px #0000008c;
+    border: 2px solid var(--wh);
+}
+
+.container-text {
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.container-text p {
+    width: 60%;
+    text-align: justify;
+}
+
+.container-text span {
+    font-family: 'Righteous';
+    font-weight: 400;
+    color: rgb(118, 107, 82)
 }
 
 
