--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background-image: linear-gradient(135deg, #000000, #060606, #121212, #181818, #242424, #303030, #363636);
     background-size: 500%;
     animation: fanimado 20s linear infinite;
@@ -160,13 +163,12 @@ main {
 }
 
 .container-home {
-    padding-top: 150px;
+    padding: 100px 0px 100px 0px;
     width: 100%;
-    height: auto;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .home {
@@ -229,11 +231,11 @@ main {
 
 /* Seccion About Me */
 .container-about-me {
-    padding-top: 100px;
+    padding: 100px 0px 100px 0px; 
     width: 100%;
     display: flex;
     justify-content: center;
-    height: auto;
+    height: 100vh;
     background-color: transparent;
     color: var(--tx);
 }
@@ -267,9 +269,10 @@ main {
     white-space: nowrap;
     border-right: 4px solid;
     width: 10ch;
-    animation: typing 10s steps(11), blink .5s infinite step-end alternate;
+    animation: typing 3s steps(11), blink .3s infinite step-end alternate;
     overflow: hidden;
     animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 @keyframes typing {
