--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 * {
-    font-family: 'Poppins', sans-serif;
+     font-family: 'Poppins', sans-serif;
 }
 
 html, body {
@@ -32,6 +32,7 @@ html, body {
     --tx: #e4e4e4;
     --wh: #e4e4e4;
     --bl: #202020;
+    --tx2: #edd119;
 }
 
 /* Estilo header */
@@ -110,7 +111,7 @@ header {
 .navbar a {
     position: relative;
     text-decoration: none;
-    color: var(--tx);
+    color: var(--tx2);
     font-weight: 700;
     text-align: center;
     margin-left: 1rem;
@@ -395,5 +396,9 @@ main {
     .socials a ion-icon {
         font-size: 24px;
         margin-right: 10px;
-    }
+    
+}
+}
+.colorfondo{
+    background-color: rgb(255, 165, 0);
 }
